--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -3,7 +3,7 @@ vagrantfile-local:
     vm:
         box: puphpet/debian75-x64
         box_url: puphpet/debian75-x64
-        hostname: ''
+        hostname: 'ezpublish.dev'
         memory: '3000'
         cpus: '1'
         chosen_provider: virtualbox
@@ -33,8 +33,8 @@ vagrantfile-local:
                     - '--parser future'
         synced_folder:
             MKB7PUDaN0Ce:
-                source: ./
-                target: /var/www
+                source: ./sites/ezpublish53
+                target: /var/www/sites/ezpublish53
                 sync_type: default
                 rsync:
                     args:
@@ -42,7 +42,17 @@ vagrantfile-local:
                         - '--archive'
                         - '-z'
                     exclude:
-                        - .vagrant/
+                    auto: 'false'
+            hioa:
+                source: ./sites/hioa
+                target: /var/www/sites/hioa
+                sync_type: default
+                rsync:
+                    args:
+                        - '--verbose'
+                        - '--archive'
+                        - '-z'
+                    exclude:
                     auto: 'false'
         usable_port_range:
             start: 10200
@@ -75,7 +85,7 @@ apache:
     settings:
         user: www-data
         group: www-data
-        default_vhost: true
+        default_vhost: false
         manage_user: false
         manage_group: false
         sendfile: 0
@@ -86,7 +96,7 @@ apache:
             servername: ezpublish.dev
             serveraliases:
                 - admin.ezpublish.dev
-            docroot: /var/www/ezpublish/web
+            docroot: /var/www/sites/ezpublish53/web
             directoryindex: index.php
             port: '8080'
             setenv:
@@ -111,11 +121,49 @@ apache:
                 - {rewrite_rule: '^/w3c/p3p\.xml - [L]'}
                 - {rewrite_rule: '^/sitemap\.xml - [L]'}
                 - {rewrite_rule: '^/bundles/ - [L]'}
-                - {rewrite_rule: '^/css/.*\.css - [L]'}
-                - {rewrite_rule: '^/js/.*\.js - [L]'}
                 - {rewrite_rule: '.* /index.php'}
             override:
-                - None
+                - All
+            options:
+                - FollowSymLinks
+            engine: php
+            custom_fragment: ''
+            ssl_cert: ''
+            ssl_key: ''
+            ssl_chain: ''
+            ssl_certs_dir: ''
+        hioa:
+            servername: hioa.dev
+            serveraliases:
+                - admin.hioa.dev
+            docroot: /var/www/sites/hioa/web
+            directoryindex: index.php
+            port: '8080'
+            setenv:
+                - 'ENVIRONMENT dev'
+                - 'USE_APC_CLASSLOADER 0'
+                - 'APC_CLASSLOADER_PREFIX "ezpublish"'
+                - 'USE_HTTP_CACHE 0'
+                - 'USE_DEBUGGING 1'
+                - 'TRUSTED_PROXIES "127.0.0.1"'
+            rewrites:
+                - {rewrite_rule: '^/api/[^/]+/v1/ /index_rest.php [L]'}
+                - {rewrite_rule: '^/var/([^/]+/)?storage/images(-versioned)?/.* - [L]'}
+                - {rewrite_rule: '^/var/([^/]+/)?cache/(texttoimage|public)/.* - [L]'}
+                - {rewrite_rule: '^/design/[^/]+/(stylesheets|images|javascript|fonts)/.* - [L]'}
+                - {rewrite_rule: '^/share/icons/.* - [L]'}
+                - {rewrite_rule: '^/extension/[^/]+/design/[^/]+/(stylesheets|fonts|flash|images|lib|javascripts?)/.* - [L]'}
+                - {rewrite_rule: '^/packages/styles/.+/(stylesheets|images|javascript)/[^/]+/.* - [L]'}
+                - {rewrite_rule: '^/packages/styles/.+/thumbnail/.* - [L]'}
+                - {rewrite_rule: '^/var/storage/packages/.* - [L]'}
+                - {rewrite_rule: '^/favicon\.ico - [L]'}
+                - {rewrite_rule: '^/robots\.txt - [L]'}
+                - {rewrite_rule: '^/w3c/p3p\.xml - [L]'}
+                - {rewrite_rule: '^/sitemap\.xml - [L]'}
+                - {rewrite_rule: '^/bundles/ - [L]'}
+                - {rewrite_rule: '.* /index.php'}
+            override:
+                - All
             options:
                 - FollowSymLinks
             engine: php
@@ -125,29 +173,26 @@ apache:
             ssl_chain: ''
             ssl_certs_dir: ''
     mod_pagespeed: 0
-nginx:
-    install: '0'
-    settings:
-        default_vhost: 1
-        proxy_buffer_size: 128k
-        proxy_buffers: '4 256k'
-    vhosts:
-        VXrcauQ419Bm:
-            server_name: awesome.dev
-            server_aliases:
-                - www.awesome.dev
-            www_root: /var/www/awesome
-            listen_port: '80'
-            location: \.php$
-            index_files:
-                - index.html
-                - index.htm
-                - index.php
-            envvars:
-                - 'APP_ENV dev'
-            engine: php
-            ssl_cert: ''
-            ssl_key: ''
+mysql:
+    install: '1'
+    root_password: root
+    adminer: 0
+    databases:
+        ezpublish:
+            grant:
+                - ALL
+            name: ezpublish
+            host: localhost
+            user: ezpublish
+            password: ezpublish
+        hioa:
+            grant:
+                - ALL
+            name: hioa
+            host: localhost
+            user: hioa
+            password: hioa
+            sql_file: ./dist/hioa.sql
 php:
     install: '1'
     version: '54'
@@ -174,18 +219,10 @@ php:
         session.save_path: /var/lib/php/session
     timezone: Europe/Oslo
     mod_php: '1'
-hhvm:
+varnish:
     install: '0'
-    nightly: 0
-    composer: '1'
-    composer_home: ''
-    settings:
-        host: 127.0.0.1
-        port: '9000'
-    ini:
-        display_errors: On
-        error_reporting: '-1'
-    timezone: null
+    varnish_listen_port: '80'
+    varnish_storage_size: '1G'
 xdebug:
     install: '0'
     settings:
@@ -195,11 +232,6 @@ xdebug:
         xdebug.remote_enable: '1'
         xdebug.remote_handler: dbgp
         xdebug.remote_port: '9000'
-xhprof:
-    install: '0'
-drush:
-    install: '0'
-    version: 6.3.0
 ruby:
     install: '1'
     versions:
@@ -214,48 +246,6 @@ python:
     versions:
         Szt9U9bS1GHY:
             version: ''
-mysql:
-    install: '1'
-    root_password: root
-    adminer: 0
-    databases:
-        ezpublish:
-            grant:
-                - ALL
-            name: ezpublish
-            host: localhost
-            user: ezpublish
-            password: ezpublish
-            sql_file: /var/www/sql/ezpublish.sql
-postgresql:
-    install: '0'
-    settings:
-        root_password: '123'
-        user_group: postgres
-        encoding: UTF8
-        version: '9.3'
-    databases: {  }
-    adminer: 0
-mariadb:
-    install: '0'
-    root_password: '123'
-    adminer: 0
-    databases: {  }
-    version: '10.0'
-sqlite:
-    install: '0'
-    adminer: 0
-    databases: {  }
-mongodb:
-    install: '0'
-    settings:
-        auth: 1
-        port: '27017'
-    databases: {  }
-redis:
-    install: '0'
-    settings:
-        conf_port: '6379'
 mailcatcher:
     install: '0'
     settings:
@@ -265,29 +255,8 @@ mailcatcher:
         http_port: '1080'
         mailcatcher_path: /usr/local/rvm/wrappers/default
         from_email_method: inline
-beanstalkd:
-    install: '0'
-    settings:
-        listenaddress: 0.0.0.0
-        listenport: '13000'
-        maxjobsize: '65535'
-        maxconnections: '1024'
-        binlogdir: /var/lib/beanstalkd/binlog
-        binlogfsync: null
-        binlogsize: '10485760'
-    beanstalk_console: 0
-    binlogdir: /var/lib/beanstalkd/binlog
-rabbitmq:
-    install: '0'
-    settings:
-        port: '5672'
 elastic_search:
     install: '0'
     settings:
         java_install: true
         autoupgrade: true
-varnish:
-    install: '1'
-    varnish_listen_port: 80,
-    varnish_storage_size: '1G'
-
